Deployed Flask API but Post not working. Use Pickle instead

--- a/Keyword_Extraction_AI/OpenAI/Keyword_Extraction_(Using_Kor).ipynb
+++ b/Keyword_Extraction_AI/OpenAI/Keyword_Extraction_(Using_Kor).ipynb
@@ -1,21 +1,10 @@
 {
-  "nbformat": 4,
-  "nbformat_minor": 0,
-  "metadata": {
-    "colab": {
-      "provenance": []
-    },
-    "kernelspec": {
-      "name": "python3",
-      "display_name": "Python 3"
-    },
-    "language_info": {
-      "name": "python"
-    }
-  },
   "cells": [
     {
       "cell_type": "markdown",
+      "metadata": {
+        "id": "oUYg278vezFR"
+      },
       "source": [
         "### Extract Structured Data From Text: Expert Mode (Using Kor)\n",
         "\n",
@@ -25,10 +14,7 @@
         "\n",
         "**Why is this important?**\n",
         "LLMs are great at text output, but they need extra help outputing information in a structure that we want."
-      ],
-      "metadata": {
-        "id": "oUYg278vezFR"
-      }
+      ]
     },
     {
       "cell_type": "code",
@@ -44,6 +30,11 @@
     },
     {
       "cell_type": "code",
+      "execution_count": 2,
+      "metadata": {
+        "id": "irVyb_oYfFwx"
+      },
+      "outputs": [],
       "source": [
         "# Kor!\n",
         "from kor.extraction import create_extraction_chain\n",
@@ -69,38 +60,38 @@
         "\n",
         "def printOutput(output):\n",
         "    print(json.dumps(output,sort_keys=True, indent=3))"
-      ],
-      "metadata": {
-        "id": "irVyb_oYfFwx"
-      },
-      "execution_count": 2,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "# It's better to do this an environment variable but putting it in plain text for clarity\n",
-        "openai_api_key = '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'"
-      ],
+      "execution_count": 3,
       "metadata": {
         "id": "T8RlggmqfHdn"
       },
-      "execution_count": 3,
-      "outputs": []
+      "outputs": [],
+      "source": [
+        "# It's better to do this an environment variable but putting it in plain text for clarity\n",
+        "openai_api_key = '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'"
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "!pip install openai"
-      ],
+      "execution_count": null,
       "metadata": {
         "id": "Nmp5NI24fK8h"
       },
-      "execution_count": null,
-      "outputs": []
+      "outputs": [],
+      "source": [
+        "!pip install openai"
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": 5,
+      "metadata": {
+        "id": "uG-peyppfO78"
+      },
+      "outputs": [],
       "source": [
         "llm = ChatOpenAI(\n",
         "#     model_name=\"gpt-3.5-turbo\", # Cheaper but less reliable\n",
@@ -109,26 +100,26 @@
         "    max_tokens=2000,\n",
         "    openai_api_key=openai_api_key\n",
         ")"
-      ],
-      "metadata": {
-        "id": "uG-peyppfO78"
-      },
-      "execution_count": 5,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "markdown",
+      "metadata": {
+        "id": "MaPXsxmNfecE"
+      },
       "source": [
         "### Using Kor\n",
         "\n",
         "Create an object that holds information about the fields you'd like to extract"
-      ],
-      "metadata": {
-        "id": "MaPXsxmNfecE"
-      }
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": 6,
+      "metadata": {
+        "id": "Ffjpdh8TfSli"
+      },
+      "outputs": [],
       "source": [
         "schema = Object(\n",
         "    # This what will appear in your output. It's what the fields below will be nested under.\n",
@@ -163,43 +154,31 @@
         "        (\"Jordan: Hey Taylor! Your social media expertise is just what I need. Can you manage our profiles? Thinking a 2-month gig. What's the rate? Taylor: Hi Jordan! Absolutely, I'm up for it! How about $800 for the 2 months? Jordan: Sounds good! Thrilled to have you onboard. Let's boost those socials together! \", [{\"client\": \"Jordan\"}, {\"freelancer\": \"Taylor\"}, {\"duration\": \"2 months\"}, {\"compensation\": \"$800\"}])\n",
         "    ]\n",
         ")"
-      ],
-      "metadata": {
-        "id": "Ffjpdh8TfSli"
-      },
-      "execution_count": 6,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "Create a chain that will extract the information and then parse it. This uses LangChain under the hood"
-      ],
       "metadata": {
         "id": "RvS2qZGBfq5F"
-      }
+      },
+      "source": [
+        "Create a chain that will extract the information and then parse it. This uses LangChain under the hood"
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "chain = create_extraction_chain(llm, schema, encoder_or_encoder_class='json')"
-      ],
+      "execution_count": 7,
       "metadata": {
         "id": "XrCjIvawfqmw"
       },
-      "execution_count": 7,
-      "outputs": []
+      "outputs": [],
+      "source": [
+        "chain = create_extraction_chain(llm, schema, encoder_or_encoder_class='json')"
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "text = \"\"\"Hi Olivia! Got a website project in mind. Can you take it on? Hoping to launch in a month. What's the ballpark cost? Hi Chris! I'm in! How about $1000 for the website? A month works for me. Excited to get started! Fantastic! Can't wait to see your skills in action. Let's build something awesome!\n",
-        "\"\"\"\n",
-        "# output = chain.predict_and_parse(text=(text))[\"data\"]  ---> DEPRECATED\n",
-        "# printOutput(output)  ---> DEPRECATED\n",
-        "\n",
-        "chain.run(text)[\"data\"]"
-      ],
+      "execution_count": 8,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -207,10 +186,8 @@
         "id": "yeVT0NiyfnYl",
         "outputId": "bd3743d0-96ae-48d4-f2ad-69244f3e4359"
       },
-      "execution_count": 8,
       "outputs": [
         {
-          "output_type": "execute_result",
           "data": {
             "text/plain": [
               "{'freelance work': [{'client': 'Chris'},\n",
@@ -219,10 +196,43 @@
               "  {'compensation': '$1000'}]}"
             ]
           },
+          "execution_count": 8,
           "metadata": {},
-          "execution_count": 8
+          "output_type": "execute_result"
         }
+      ],
+      "source": [
+        "text = \"\"\"Hi Olivia! Got a website project in mind. Can you take it on? Hoping to launch in a month. What's the ballpark cost? Hi Chris! I'm in! How about $1000 for the website? A month works for me. Excited to get started! Fantastic! Can't wait to see your skills in action. Let's build something awesome!\n",
+        "\"\"\"\n",
+        "# output = chain.predict_and_parse(text=(text))[\"data\"]  ---> DEPRECATED\n",
+        "# printOutput(output)  ---> DEPRECATED\n",
+        "\n",
+        "chain.run(text)[\"data\"]"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "def ner_run(text):\n",
+        "    return chain.run(text)[\"data\"]"
       ]
     }
-  ]
+  ],
+  "metadata": {
+    "colab": {
+      "provenance": []
+    },
+    "kernelspec": {
+      "display_name": "Python 3",
+      "name": "python3"
+    },
+    "language_info": {
+      "name": "python"
+    }
+  },
+  "nbformat": 4,
+  "nbformat_minor": 0
 }
